--- a/PFMconstraints.tex
+++ b/PFMconstraints.tex
@@ -345,6 +345,12 @@ La figura (\subref{fig:howard2012planet}) mostra distribuzione radiale corretta 
 
 \end{figure}
 
+La distribuzione dei periodi \'e mostrata in figura (\ref{fig:freqperstarvsPanfit}): i pianeti sono raggruppati per intervalli di raggio. La frequenza dei pianeti in funzione del periodo segue andamento
+\begin{equation}
+\TDy{\log{P}}{f}=K_PP\expy{\beta}[1-\exp{-(\frac{P}{P_0})\expy{\gamma}}]
+\end{equation}
+Si ipotizza che il diverso valore del raggio critico $P_0$ (riportato in figura) sia dovuto alla dipendenza dal raggio planetario del meccanismo di frenamento della migrazione.
+
 \begin{workout}[transit distro observed refs]
 Refs:Mthods of detecting exoplanets (radius distro: pg 136)
 the occurrence within 0.25 au of solar-type stars from kepler
@@ -437,6 +443,16 @@ Are planetary systems filled to capacity? (Fang Nargot 13)
 	\end{itemize}
 \end{workout}
 
+\begin{workout}[Mass-Metallicity relation for giant planet: ''Mass-metallicity relation for giant planets'' (Thorngren 16)]
+Solve equation for planetary structure to infer $M_c+M_e$ assuming $M_c\approx10\mearth{}$; search correlations between $M_p$, $M_z$ and $[Fe/H]$, $Z_p$ and $Z_p/Z*$.
+Negative correlation between planet's metal enrichment relative to its parent star: MF11, mordasini 14.
+\begin{align*}
+&M_p=M_c+M_e,\ M_Z=M_c+Z_*M_eZ_p=M_z/M_p\\
+&Z_p/Z_*=1+(M_c/M_p)(1-Z*_)/Z_*
+\end{align*}
+latter expression fall off more rapidly with planet mass  than $Z_p/Z_*\approx10(M_p/M_J)\expy{-0.5}$ (later accretion of planetesimal debris Mousis 09)
+\end{workout}
+
 \begin{wrapfigure}[18]{l}{0.61\textwidth}
 	\centering \includegraphics[trim={0cm 12cm 0 0},clip, width=0.6\textwidth]{MR-model-obs}
 	\caption{Relazione massa-raggio determinata sulla base di modello planetario dopo \SI{5}{\giga\year}. Per gli esopianeti sono indicate le curve per temperature di equilibrio di \SI{1000}{\kelvin} e \SI{2000}{\kelvin}. Da \cite{guillot2014giant}.}\label{fig:MR-model-obs}
@@ -452,11 +468,7 @@ R\propto M\expy{(1-n)/(3-n)}
 \end{equation}
 per $M\approx\mjupiter$ $n\approx1$ quindi il raggio \'e approssimativamente costante. Questo fatto \'e visibile anche nella distribuzione dei raggi planetari (figura \subref{fig:probvsR-T}) nel picco attorno a $\rjupiter$.
 La figura (\subref{fig:RfreqPl100ub}) mostra due picchi nella distribuzione radiale a $1.3\rearth{}$ e $2.4\rearth{}$ dovuti alle sottopopolazioni di pianeti rocciosi e gassosi per $P<\SI{100}{\day}$: i pianeti rocciosi hanno atmosfera di H/He che non contribuisce alle dimensione mentre i pianeti nettuniani hanno strato di gas consistente rispetto alla massa del pianeta. La valle a $1.7\rearth{}$ potrebbe essere il raggio di separazione tra pianeti terrestri con atmosfera tenue di H/He soggetta a evaporazione e pianeti nettuniani con massa consistente di H/He.
-La distribuzione dei periodi \'e mostrata in figura (\subref{fig:freqperstarvsPanfit}): i pianeti sono raggruppati per intervalli di raggio. La frequenza dei pianeti in funzione del periodo segue andamento
-\begin{equation}
-\TDy{\log{P}}{f}=K_PP\expy{\beta}[1-\exp{-(\frac{P}{P_0})\expy{\gamma}}]
-\end{equation}
-Si ipotizza che il diverso valore del raggio critico $P_0$ (riportato in figura) sia dovuto alla dipendenza dal raggio planetario del meccanismo di frenamento della migrazione.
+
 
 \begin{errata}[Equazione di stato politropa: relazione massa raggio]
 	\begin{equation}
@@ -617,6 +629,10 @@ La figura (\subref{fig:SED-contours}) mostra le strutture attorno a stelle giova
 In figura (\ref{fig:clusterage-fstar}) \'e riportata la frazione di stelle con dischi protoplanetari in funzione dell'et\'a del cluster. \'E possibile stimare tempo di vita caratteristico del disco considerando andamento esponenziale per frazione di dischi: secondo (\cite{mamajek2009initial}) $\tau_c\approx\SI{2.5}{\mega\year}$, mentre (\cite{haisch2001disk}) hanno determinato $\tau_c\approx\SI{6}{\mega\year}$.
 
 \vspace{0.2\textheight}
+
+\begin{workpout}[''The TW Hya Disk at 870μm:  Comparison of CO and Dust Radial Structures'': introduzione profilo pi\'u ripido per componente solida]
+peeble drift: peeble drift inward from peeble formation line 
+\end{workpout}
 
 \begin{workout}[Caratteristiche fittate proto-dischi]
 	\begin{table}[!ht]
