--- a/pps-seminario.tex
+++ b/pps-seminario.tex
@@ -97,13 +97,15 @@
 
 \begin{workout}[Mordasini18 MAIN RESULTS]
 \begin{itemize}
+\item Cosa ho messo nel modello e2e? (Montecarlo variables) Disk metallicity $[M/H]$ (Santos 05) and $f_{dg}$ (Lodders 03). Initial disk mass: stability (SHu 90), observation (andrws 10, manara 16) MMSN; Disk lifetime (Haisch 01, mamajek 09); starting embryos position
+planetesimal size is 300m, $\alpha=0.002$, planetesimal distro $\propto r\expy{-1.5}$ and outer exponential radius half that of gas to account inward drift (kornet 01; birnstiel andrews 14) and more concentrated distro resulting from planetesimal formation (drazkowska 16).
 \item Distribuzione massa pianeti: distribuzione bimodale con discrimine a $30\mearth{}$.
-Cosa ho messo nel modello e2e?
+
 Massa critica per accrescimento di gas: tempo scala accrescimento planetesimi vs tempo scala disco.
 Tempi scala migrazione
 \item distribuzione in semiassi che dipende da posizione iniziale embrione: necessity to include earlier planetary formation; montecarlo variable: initial starting position embryos- kokubo ida 00: uniform distro in log(a) (vedi anche ida lin 10) (dov'era scritto del comportamento caotico??+); hasegawa pudritz 11, cridland 16: embryos rapidly moves into traps.
 Preferred formation regions of planetesimal (Drazkowska16; brauer 08), particle pile-up outside orbits of already existing planets (Pinilla15), strong migration traps (Horn 12, Hasegawa Pudritz 12).
-Disc/planetesimals parameters: planetesimal has steeper profile $\propto r\expy{-3/2}$, outer exponential radius half that of gas: inward drift of dust (kornet 01, birnstiel Andrews 14), concentrated distro resulting from planetesimal formation (Drazkowska 16); planetesimal size is 300m, $\alpha=0.002$.
+Disc/planetesimals parameters: planetesimal has steeper profile $\propto r\expy{-3/2}$, outer exponential radius half that of gas: inward drift of dust (kornet 01, birnstiel Andrews 14), concentrated distro resulting from planetesimal formation (Drazkowska 16);
 \item Distribuzione raggi: diagramma massa-raggio, composizione, evaporazione.
 \item (Mordasini pg 27) LArge majority are low mass planets ($0.1-10\mearth{}$), 
 \item frequency of giant, close-in and habitable planets. The high frequency of close-in planets can be reproduced assuming steep distribution of planetesimal and centrally concentrated (chiang laughlin 13, drazkowska 16)
