--- a/CAdesc.tex
+++ b/CAdesc.tex
@@ -392,9 +392,39 @@ Greenzweig Lissauer 92
 	Stopping time $t_s=\frac{\rho_sa}{\rho c_s}$ ($a<\lambda_g$). L'evoluzione dinamica delle particelle solide \'e determinata flussi macroscopici dovuti all'evoluzione del disco, gas-drag, settling
 \end{workout}
 
+\begin{workout}[allargamento schema accrescimento parte solida]
+	\begin{itemize}
+		\item peebles: observations show that mm and smaller particles are retained in PPD (Cleeves16). Peebles remain coupled to gad -> areodynamic assisted or peeble accretion (Ormel klahr 10, Lambrechts jOhansen 12)
+	\end{itemize}
+\end{workout}
+
 {\let\clearpage\relax\let\cleardoublepage\relax
 \chapter{Accrescimento di gas ed evoluzione disco di accrescimento}\label{chap:gasaccretion}
 }% e fase isolata
+
+\begin{workout}[Grain opacity and the bulk composition of extrasolar planets (Alibert mordasini klahr)]
+	$b=10.4+\log{f}$
+\end{workout}
+
+\begin{workout}[Higher mass gap formation reduces accretion rate]
+	\begin{equation}
+	f_{va04}=1.668(\frac{M_p}{\mjupiter{}})\expy{1/3}\exp{-\frac{M_p}{1.5\mjupiter{}}}+0.04
+	\end{equation}
+\end{workout}
+
+\begin{workout}[Some refs]
+	\begin{itemize}
+		\item Hasegawa Pudritz 13: Planetary population in mass-period diagram: a statistical treatment of exoplanet formation and role of planet traps.
+		\item Rafikov 05: Atmospheres of protoplanetary cores. Espressioni per $R_H$, $R_B$.
+		\item shiraiashi ida 08:Infall of planetesimal onto growing giant planets. KH contraction timescale; accretion of planetesimal and contraction phase.
+	\end{itemize}
+\end{workout}
+
+\begin{workout}[Main point: of gas accretion]
+	\begin{itemize}
+		\item timescale to accrete mass in runaway mode is shorter than disk timescale: planetary desert in $10-100\mearth{}$??
+	\end{itemize}
+\end{workout}
 
 \section{Evoluzione disco di accrescimento}
 
@@ -409,23 +439,13 @@ Modelli considerati risolve l'equazione per l'evoluzione viscosa:
 	&\TDy{t}{\Sigma}=\frac{1}{r}\PDof{r}[3r\expy{1/2}\PDof{r}(\nu\Sigma r\expy{1/2})]+\dot{\Sigma}_w(r)+\dot{\Sigma}_{embryo}(r)\label{eq:diskaccrphev-m18}\\
 	&\dot{\Sigma}_w(a)=\left\{\begin{array}{c}0\quad a<R_g\\\frac{\dot{M}_w}{2\pi(a_{max}-R_g)a}\quad \text{altrimenti}\\\end{array}\right.
 \end{align}
-con $\dot{\Sigma}_w$ contributo della foto-evaporazione (\cite{veras2004outward}), $R_g=\SI{5}{\astronomicalunit}$ e $a_{max}$ estremo del disco,  $\dot{\Sigma}_{embryo}$ contributo di accrescimento di gas e componente solida dei pianeti.
+con $\dot{\Sigma}_w$ contributo della foto-evaporazione, $R_g=\SI{5}{\astronomicalunit}$ e $a_{max}$ estremo del disco,  $\dot{\Sigma}_{embryo}$ contributo di accrescimento di gas.
 %La densit\'a superficiale iniziale \'e assunta essere:
 %\begin{equation}
 %\Sigma(a,t=0)=\Sigma_0(\frac{r}{1AU})\expy{p_g}\Exp{[-(\frac{r}{R_o})\expy{2+p_g}]}(1-\sqrt{\frac{r}{R_i}})
 %\end{equation}
 %dove i parametri possono essere scelti casualmente secondo una distribuzione di probabilit\'a ricavata dalle osservazioni.
 
-Per determinare l'accrescimento di gas \'e necessario calcolare la struttura planetaria in alternativa si pu\'o averne una stima da
-\begin{align}
-	&\dot{M}_{e,KH}=\frac{M_p}{\tau_{KH}}\\
-	&\tau_{KH}=10\expy{p}(\frac{M_p}{\mearth{}})^q(\frac{\kappa}{\si{\gram\per\square\cm}})\si{\year}
-\end{align}
-dove p,q sono ottenuti tramite modelli di struttura planetaria; \cite{mordasini2014grain} hanno determinato $\kappa=\SI{e-2}{\gram\per\square\cm}$, $p=10.4$ e $q=-1.5$.
-
-\begin{workout}[Grain opacity and the bulk composition of extrasolar planets (Alibert mordasini klahr)]
-	$b=10.4+\log{f}$
-\end{workout}
 
 \begin{workout}[X-ray photoevaporation]
 (owen12)
@@ -433,49 +453,6 @@ thermal equilibrium: T of optically thin X-ray heated gas approx monotonic funct
 \[\vec{g}_{eff}=-\frac{GM_*}{r^2}\hat{r}+\frac{GM_*R_b}{R^3}\hat{R}\]
 where $\hat{r}$ and $\hat{R}$ are radial unit vector in spherical and cylindrical coordinate
 \end{workout}
-
-\begin{workout}[Higher mass gap formation reduces accretion rate]
-	\begin{equation}
-	f_{va04}=1.668(\frac{M_p}{\mjupiter{}})\expy{1/3}\exp{-\frac{M_p}{1.5\mjupiter{}}}+0.04
-	\end{equation}
-\end{workout}
-
-
-\begin{workout}[allargamento schema accrescimento parte solida]
-	\begin{itemize}
-		\item peebles: observations show that mm and smaller particles are retained in PPD (Cleeves16). Peebles remain coupled to gad -> areodynamic assisted or peeble accretion (Ormel klahr 10, Lambrechts jOhansen 12)
-		
-	\end{itemize}
-\end{workout}
-
-\begin{workout}[Some refs]
-	\begin{itemize}
-		\item Hasegawa Pudritz 13: Planetary population in mass-period diagram: a statistical treatment of exoplanet formation and role of planet traps.
-		\item Rafikov 05: Atmospheres of protoplanetary cores. Espressioni per $R_H$, $R_B$.
-		\item shiraiashi ida 08:Infall of planetesimal onto growing giant planets. KH contraction timescale; accretion of planetesimal and contraction phase.
-	\end{itemize}
-\end{workout}
-
-\begin{workout}[Main point: of gas accretion]
-\begin{itemize}
-\item timescale to accrete mass in runaway mode is shorter than disk timescale: planetary desert in $10-100\mearth{}$??
-\end{itemize}
-\end{workout}
-
-\begin{wrapfigure}[15]{l}{0.5\textwidth}
-\includegraphics[trim={0cm 2cm 0 0},clip, keepaspectratio,width=0.48\textwidth]{massenvvscore}
-\caption{Massa planetaria in funzione della massa del core. Da \cite{alibert2005models}.}\label{fig:massenvvscore}
-\end{wrapfigure}
-
-Se il protopianeta raggiunge un valore critico di massa, dipendente debolmente da luminosit\'a generata da accrescimento dei pianetesimi e opacit\'a, per mantenere equilibrio idrostatico l'inviluppo gassoso del pianeta si contrae su tempi scala di Kelvin-Helmholtz. In questa seconda fase l'accresscimento di massa diviene cos\'i rapido da esaurire il gas disponibile nella regione: curva verticale di figura (\ref{fig:massenvvscore}). L'accrescimento di gas has come limite superiore il flusso di gas dovuto a evoluzione viscosa del disco.
-
-Da modelli numerici risulta
-\begin{equation}
-M_c^{crit}=10\mearth{}(\frac{\dot{M}_c}{\num{e-7}\mearth{}\si{\per\year}})\expy{q}(\frac{\kappa}{\SI{0.1}{\square\meter\per\kilo\gram}})\expy{s}
-\end{equation}
-con $q,s\approx0.2-0.3$ (\cite{ikoma2000formation}).
-
-\vspace{2cm}
 
 \section{Accrescimento limitato da velocit\'a di raffreddamento}
 
@@ -544,6 +521,19 @@ quindi la massa di gas aumenta esponenzialmente a partire da $M_c\approx10\meart
 \end{workout}
 
 \section{Accrescimento limitato dalla disponibilit\'a di gas del disco}
+
+\begin{wrapfigure}[15]{l}{0.5\textwidth}
+	\includegraphics[trim={0cm 2cm 0 0},clip, keepaspectratio,width=0.48\textwidth]{massenvvscore}
+	\caption{Massa planetaria in funzione della massa del core. Da \cite{alibert2005models}.}\label{fig:massenvvscore}
+\end{wrapfigure}
+
+Se il protopianeta raggiunge un valore critico di massa, dipendente debolmente da luminosit\'a generata da accrescimento dei pianetesimi e opacit\'a, per mantenere equilibrio idrostatico l'inviluppo gassoso del pianeta si contrae su tempi scala di Kelvin-Helmholtz. In questa seconda fase l'accresscimento di massa diviene cos\'i rapido da esaurire il gas disponibile nella regione: curva verticale di figura (\ref{fig:massenvvscore}). L'accrescimento di gas has come limite superiore il flusso di gas dovuto a evoluzione viscosa del disco.
+
+Da modelli numerici risulta
+\begin{equation}
+M_c^{crit}=10\mearth{}(\frac{\dot{M}_c}{\num{e-7}\mearth{}\si{\per\year}})\expy{q}(\frac{\kappa}{\SI{0.1}{\square\meter\per\kilo\gram}})\expy{s}
+\end{equation}
+con $q,s\approx0.2-0.3$ (\cite{ikoma2000formation}).
 
 Se $H\approx R$ il pianeta perturba in maniera non trascurabile il disco (il rate di accrescimento di gas \'e maggiore di quello fornito dal disco). Il raggio del pianeta \'e determinato dalle condizioni al bordo per materia accresciuta tramite free-fall da $R_H$ a $R$:
 \begin{align}
